# dataset-format-benchmark

./: .coveragerc  .dockerignore  .python-version  Containerfile  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: checks.yml  docker-publish.yaml  python-publish.yaml  python-publish.yml  release-on-tag-push.yml
docs/: conf.py  index.rst
src/dataset_format_benchmark/: __main__.py  matrices.py  runner.py
src/dataset_format_benchmark/datasets/: __init__.py  utils.py
src/dataset_format_benchmark/datasets/kaggle/: __init__.py  face_masks.py  flicrk_image.py  wiki_art.py
src/dataset_format_benchmark/datasets/nvidia/: downloader.py  ffhq.py
src/dataset_format_benchmark/datasets/own/: annotate.py  annotation_window.ui  converter.py  transport.py
src/dataset_format_benchmark/models/: inception.py
src/dataset_format_benchmark/storages/: __init__.py  containers.py  fs.py
src/python3_project_template/: __main__.py  conf.py
tests/: conftest.py
tests/unit/: test_poc.py
