#[ Build system ]
[build-system]
requires = ["setuptools>=60.5", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

#[ Project metadata and dependencies (PEP 621) ]
[project]
name = "dataset-format-benchmark"
dynamic = ["version"]
description = "Image dataset format benchmark"
readme = { file = "README.rst", content-type = "text/x-rst; charset=UTF-8" }
requires-python = "==3.13.11"
license = { file = "LICENSE" }
authors = [
    { name = "Oleg Korsak", email = "kamikaze.is.waiting.you@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "Cython==3.2.3",
    "h5py==3.15.1",
    "imageio[freeimage,pillow,pyav]==2.37.2",
    "kaggle==1.8.2",
    "lightning==2.6.0",
    "matplotlib==3.10.8",
    "msgspec==0.20.0",
    "numpy==2.3.5",
    "Pillow==12.0.0",
    "pkgconfig==1.5.5",
    "rawpy==0.25.1",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "torch",
    "torchvision",
    "tqdm==4.67.1",
    "zarr==3.1.5",
    "requests==2.32.5",
]

[project.urls]
Homepage = "https://github.com/kamikaze/dataset-format-benchmark"
Documentation = "https://github.com/kamikaze/dataset-format-benchmark/wiki"

[dependency-groups]
cuda = [
    "cupy-cuda12x==13.6.0",
]
dev = [
    "pip",
    "setuptools",
    "setuptools_scm",
    "twine",
    "wheel",
]
testing = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
fastapi_project_template = [
    "rustlib/Cargo.toml",
    "rustlib/lib.rs",
    "clib/extmod.c",
    "*.rst",
    "*.txt",
    "*.md"
]

[tool.setuptools.dynamic]
readme = { file = "README.rst" }
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_rust]
# Optional Rust-specific configuration
# Positioning of the compiled extension
extensionmodule = true

[tool.bdist_wheel]
universal = true

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = true
formats = ["bdist_wheel"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FA",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
exclude = ["*.pyi"]
indent-style = "space"
quote-style = "single"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = "error"
reportUnnecessaryComparison = "error"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov fastapi_project_template --cov-fail-under=20 --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]
